# nostr-planner

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  nostr-login-reference.md  package-lock.json  package.json  planner-console-log.txt  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/daemon/: .env.example  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
apps/daemon/src/: caldav.ts  config.ts  decrypt.ts  digest.test.ts  digest.ts  index.ts  push.ts  relay.ts  timezone.test.ts  timezone.ts
apps/planner/: CLAUDE.md  Links.txt  SKILL.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/planner/public/: manifest.json  sw.js
apps/planner/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/planner/src-tauri/: Cargo.toml  tauri.conf.json
apps/planner/src-tauri/capabilities/: default.json
apps/planner/src-tauri/icons/: README.md  icon.icns
apps/planner/src-tauri/src/: lib.rs  main.rs
apps/planner/src/components/: AuthUrlModal.tsx  BackupPanel.tsx  CalendarApp.tsx  DailyView.tsx  DayDetailModal.tsx  DayView.tsx  EventDetailModal.tsx  EventModal.tsx  HashtagManagerModal.tsx  Header.tsx  ImportReviewModal.tsx  ListView.tsx  LocationManagerModal.tsx  LoginScreen.tsx  MonthView.tsx  ReconnectScreen.tsx  SettingsPanel.tsx  ShareViewModal.tsx  SharingModal.tsx  ShrinkGuardModal.tsx  Sidebar.tsx  SyncStatusPill.tsx  UpcomingView.tsx  (+1 more)
(+46 files in other folders)
