[package]
name = "nostr-planner"
version = "1.16.18"
edition = "2021"

[lib]
name = "nostr_planner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
# Deep-link plugin: handles nostrconnect:// and bunker:// URI launches
# from Amber (Android intent) and other signer apps on every platform.
# Same plugin covers Universal Links on iOS (via apple-app-site-association
# served alongside the web build) and custom-scheme handlers on desktop.
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
